fix: inner scrolling on iOS and other css improvements

--- a/src/components/FlashCardComponent.css
+++ b/src/components/FlashCardComponent.css
@@ -1,10 +1,11 @@
 .flashcard-container {
   perspective: 1000px;
-  width: 400px;
-  height: 250px;
+  max-width: 1000px;
+  max-height: 1000px;
   margin: 20px auto;
   cursor: pointer;
   user-select: none;
+  width: 100%;
 }
 
 .flashcard {
@@ -34,6 +35,8 @@
   align-items: center;
   padding: 20px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .flashcard-front {
@@ -49,15 +52,13 @@
 
 .flashcard-content {
   font-size: 1.2rem;
-  text-align: center;
+  text-align: left;
   line-height: 1.4;
-  flex-grow: 1;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+  flex-grow: 1;  
   word-wrap: break-word;
   hyphens: auto;
   overflow: auto;
+  max-height: 100%;
 }
 
 .flashcard-hint {
@@ -68,11 +69,7 @@
 }
 
 @media (max-width: 480px) {
-  .flashcard-container {
-    width: 90%;
-    max-width: 350px;
-    height: 200px;
-  }
+  
   
   .flashcard-content {
     font-size: 1rem;
